[package]
name = "delta-server"
version = "0.2.0"
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sled = "0.34.6"
bincode = "1.3.1"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
structopt = "0.3.21"
regex = "1.4.2"
lazy_static = "1.4.0"
futures = "0.3.8"
