[package]
name = "write-delta"
version = "0.1.0"
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
structopt = "0.3.21"
validator = { version = "0.12", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.2"
bincode = "1.3.1"
serde = "1.0.118"
serde_derive = "1.0.118"
