[package]
name = "remove-delta"
version = "0.1.0"
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
sled = "0.34.6"
lazy_static = "1.4.0"
validator = { version = "0.12", features = ["derive"] }
regex = "1.4.2"